@@ -1,3 +1,8 @@
+2009-04-17  Dave Morrison  <drm@finkproject.org>
+
+	* PkgVersion.pm: use architecture-based compiler wrapper when
+	appropriate
+
 2009-04-17  Benjamin Reed  <rangerrick@users.sourceforge.net>
 
 	* PkgVersion.pm: Allow Type: bundle in splitoffs
